Fix icon alignment in event settings

--- a/indico/web/client/styles/modules/_event_management.scss
+++ b/indico/web/client/styles/modules/_event_management.scss
@@ -558,6 +558,7 @@ th.i-table {
         overflow: visible;
 
         & > .icon {
+            align-self: flex-start;
             color: $dark-gray !important;
         }
 
